force-app/main/default/objects/Book_Invoice__c/Book_Invoice__c.object-meta.xml
<CustomObject>
    <label>Book Invoice</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>