force-app/main/default/objects/Book_Invoice__c/fields/Available_Books__c.field-meta.xml
<CustomField>
    <fullName>Available_Books__c</fullName>
    <formula>Book_detail__r.Book_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Books</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>