force-app/main/default/objects/Book_Invoice__c/fields/Book_detail__c.field-meta.xml
<CustomField>
    <fullName>Book_detail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Book Detail</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Book Invoices</relationshipLabel>
    <relationshipName>Book_Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>