force-app/main/default/objects/Book_Invoice__c/fields/Profit_percentage__c.field-meta.xml
<CustomField>
    <fullName>Profit_percentage__c</fullName>
    <label>Profit percentage</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>