force-app/main/default/objects/Book_Invoice__c/fields/Quatity__c.field-meta.xml
<CustomField>
    <fullName>Quatity__c</fullName>
    <label>Quatity</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>