force-app/main/default/objects/Book_Invoice__c/fields/Sale_price__c.field-meta.xml
<CustomField>
    <fullName>Sale_price__c</fullName>
    <formula>Book_detail__r.Purchase_Price__c + (Book_detail__r.Purchase_Price__c *  Profit_percentage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>