force-app/main/default/objects/Book_Invoice__c/fields/Total_Price_after_discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_after_discount__c</fullName>
    <formula>Total_Price__c - ( Total_Price__c *  Discount_Percentage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price after discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>