force-app/main/default/objects/Book_Invoice__c/fields/Writer__c.field-meta.xml
<CustomField>
    <fullName>Writer__c</fullName>
    <formula>Book_detail__r.Writer__r.Name__c</formula>
    <label>Writer</label>
    <type>Text</type>
</CustomField>