force-app/main/default/objects/Book_Invoice__c/listViews/All_Invoice.listView-meta.xml
<ListView>
    <fullName>All_Invoice</fullName>
    <columns>Sale_Status__c</columns>
    <columns>NAME</columns>
    <columns>Book_detail__c</columns>
    <columns>Writer__c</columns>
    <columns>Total_Price__c</columns>
    <columns>Discount_Percentage__c</columns>
    <columns>Total_Price_after_discount__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Invoice</label>
</ListView>